Fixed issue that caused errors when creating a new rule (was generating schema with no data), Fixed up styling of main page so that all the versions are less squished, Increased max layout size to 1300px

--- a/app/styles/home.module.css
+++ b/app/styles/home.module.css
@@ -31,13 +31,14 @@
   color: #389e0d !important;
   border-color: #389e0d !important;
 }
-.draftBtn:hover, .inDevBtn:hover, .inReviewBtn:hover, .inProductionBtn:hover {
-  border-style: inset;
-}
 .embeddedBtn {
   color: #666 !important;
-  border-color: #666 !important;
+  border-color: #d9d9d9 !important;
 }
 .embeddedBtn:hover {
   border: 1px solid !important;
+  border-color: #d9d9d9 !important;
+}
+.draftBtn:hover, .inDevBtn:hover, .inReviewBtn:hover, .inProductionBtn:hover, .embeddedBtn:hover {
+  border-style: inset;
 }
